--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,3 +1,10 @@
-<h1 class="main-slogan">Pedal Your Way to Freedom – <span><a href="">Find</a></span> Your Perfect Ride Today!</h1>
+<div class="main-wrapper">
+    <div class="top">
+        <div class="content">
+            <h1 class="main-slogan">Pedal Your Way to Freedom – <span><a href="">Find</a></span> Your Perfect Ride Today!</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus asperiores voluptatem veritatis unde, impedit at deserunt pariatur aut odit. Totam ipsum tenetur ipsam sequi iusto quisquam. Aliquid, beatae? Eveniet, unde.</p>
+        </div>
 
-<img class="img-hero" src="../../../../../../assets/img/hero-img.jpeg" alt="">
+        <img class="img-hero" src="../../../../../../assets/img/hero-img.jpeg" alt="Hero Image">
+    </div>
+</div>
